# django_zendesk

./: pyproject.toml
.github/workflows/: main.yml
demo_app/: manage.py
demo_app/demo_app/: settings.py  urls.py
demo_app/users/: models.py
django_zendesk/: __init__.py  models.py  views.py
django_zendesk/tests/: __init__.py  test_views.py
