[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pivotal-django-zendesk"
dynamic = ["version"]
description = "Provides single-sign on functionality between a django.contrib.auth based site and Zendesk"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Pivotal Energy Solutions", email = "steve@pivotal.energy" },
]
keywords = [
    "django",
    "zendesk",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "django>=4.2",
    "requests",
]

[project.optional-dependencies]
test = [
    "django-environ",
    "mysqlclient",
    "flake8",
    "coverage",
    "pre-commit",
    "black",
    "bandit"
]

[project.urls]
"Bug Reports" = "https://github.com/pivotal-energy-solutions/django_zendesk/issues"
Download = "https://github.com/pivotal-energy-solutions/django_zendesk/archive/2.1.18.tar.gz"
Homepage = "https://github.com/pivotal-energy-solutions/django_zendesk"
"Original Source" = "https://bitbucket.org/jonknee/django_zendesk"
"Say Thanks!" = "https://saythanks.io/to/rh0dium"

[tool.hatch.version]
path = "django_zendesk/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/django_zendesk",
]

[tool.hatch.build.targets.wheel]
packages = ['django_zendesk']
include = [
    "/django_zendesk/templates/**/*",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
/static/.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

[tool.coverage.run]
branch = true
omit = [
    "*/demo_app/**",
    "*/migrations/*",
    "*/tests/**",
]

[tool.coverage.report]
fail_under = 43
precision = 1
skip_covered = true
skip_empty = true
ignore_errors = true
sort = "cover"
