[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pivotal-django-zendesk"
dynamic = ["version"]
description = "Provides single-sign on functionality between a django.contrib.auth based site and Zendesk"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Pivotal Energy Solutions", email = "steve@pivotal.energy" },
]
keywords = [
    "django",
    "zendesk",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "django>=5.2",
    "requests",
]

[project.optional-dependencies]
test = [
    "django-environ",
    "mysqlclient",
    "coverage",
    "pre-commit",
    "black",
    "bandit",
    "ruff"
]

[project.urls]
"Bug Reports" = "https://github.com/pivotal-energy-solutions/django_zendesk/issues"
Download = "https://github.com/pivotal-energy-solutions/django_zendesk/archive/2.1.18.tar.gz"
Homepage = "https://github.com/pivotal-energy-solutions/django_zendesk"
"Original Source" = "https://bitbucket.org/jonknee/django_zendesk"
"Say Thanks!" = "https://saythanks.io/to/rh0dium"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.0"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
    "/django_zendesk",
]

[tool.hatch.build.targets.wheel]
packages = ['django_zendesk']
include = [
    "/django_zendesk/templates/**/*",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '(\.git|.venv|_build|build|dist|.*\/__pycache__\/)'

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".nox",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
]
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
ignore = ["F401", "E402"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bandit]
targets = ['django_zendesk']
exclude_dirs = ["django_zendesk/tests", "demo_app"]
skips = ["B303", "B324", "B113"]

[tool.coverage.run]
branch = true
command_line = "demo_app/manage.py test --noinput --settings=demo_app.settings_test django_zendesk"
omit = [
    "*/demo_app/**",
    "*/migrations/*",
    "*/tests/**",
]

[tool.coverage.report]
fail_under = 39
precision = 1
skip_covered = true
skip_empty = true
ignore_errors = true
sort = "cover"

[tool.bumper]
exclude = [".idea", ".github", "demo_app"]
repo = "pivotal-energy-solutions/django_zendesk"
report = "out.json"
